# python-securepay

./: .gitignore  .gitlab-ci.yml  COPYING  HISTORY.rst  README.rst  TODO.rst  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
securepay/: __init__.py  securepay.py
src/securepay/: __init__.py  securepay.py
