[metadata]
name = securepay
version = 1.0.0
description = Interface to the Securepay credit card gateway.
long_description = file: README.rst, HISTORY.rst
url = https://github.com/BenSturmfels/python-securepay
author = Ben Sturmfels
author_email = ben@sturm.com.au
project_urls =
    Source = https://github.com/BenSturmfels/python-securepay
    Bug Reports = https://github.com/BenSturmfels/python-securepay/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml>=3.3.3

[options.packages.find]
where = src